# protobuf

./: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE  protobuf.bzl  protobuf_deps.bzl
.github/: BUILD.bazel
.github/workflows/: safe_test_runner.yml  test_cpp.yml  test_objectivec.yml  test_php.yml  test_php_ext.yml  test_python.yml  test_ruby.yml  test_runner.yml  unsafe_test_runner.yml
ci/: common.bazelrc  macOS.bazelrc
cmake/: BUILD.bazel  abseil-cpp.cmake  conformance.cmake  dependencies.cmake  gtest.cmake  make_dependencies.py
conformance/: BUILD.bazel  conformance_test_runner.cc
pkg/: BUILD.bazel  cc_dist_library.bzl
python/: BUILD.bazel
ruby/: BUILD.bazel  google-protobuf.gemspec  internal.bzl
ruby/ext/google/protobuf_c/: BUILD.bazel
ruby/lib/google/: BUILD.bazel
ruby/tests/: BUILD.bazel  common_tests.rb
src/: file_lists.cmake
src/google/protobuf/: BUILD.bazel
upb/cmake/: BUILD.bazel
