load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")

package(default_visibility = ["//ruby:__subpackages__"])

cc_library(
    name = "protobuf_c",
    srcs = glob([
        "*.h",
        "*.c",
    ]),
    deps = [
        "@rules_ruby//ruby/runtime:headers",
        "//third_party/utf8_range",
    ],
    target_compatible_with = select({
        "@rules_ruby//ruby/runtime:config_jruby": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    linkstatic = True,
    alwayslink = True,
)

apple_binary(
    name = "bundle",
    binary_type = "loadable_bundle",
    linkopts = [
        "-undefined,dynamic_lookup",
        "-multiply_defined,suppress",
    ],
    platform_type = "macos",
    tags = ["manual"],
    deps = [
        ":protobuf_c",
    ],
)

pkg_files(
    name = "dist_files",
    srcs = glob([
        "*.h",
        "*.c",
        "*.rb",
    ]),
    strip_prefix = strip_prefix.from_root(""),
    visibility = ["//ruby:__pkg__"],
)
